# wxp

./: .gitignore  .gitmodules  Cargo.toml  README.md  README_JA.md
.changes/: macos-protocol-body-nocopy.md
.github/workflows/: ci.yml
crates/host_window/: Cargo.toml  README.md
crates/host_window/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/host_window/tests/: run_loop_integration_test.rs
crates/run_loop/: Cargo.toml  README.md  README_JA.md
crates/run_loop/.github/workflows/: ci.yml
crates/run_loop/benches/: latency.rs
crates/run_loop/docs/: maintainers.md  maintainers_JA.md  testing.md
crates/run_loop/src/: handle.rs  lib.rs  main_thread.rs  run_loop.rs  run_loop_sender.rs  task.rs  test_harness.rs  test_helper.rs
crates/run_loop/src/platform/: mod.rs
crates/run_loop/src/platform/android/: mod.rs  sys.rs
crates/run_loop/src/platform/darwin/: mod.rs  sys.rs
crates/run_loop/src/platform/linux/: mod.rs  sys.rs
crates/run_loop/src/platform/win32/: adapter.rs  mod.rs  sys.rs
crates/run_loop/src/util/: blocking_variable.rs  capsule.rs  future_completer.rs  mod.rs
crates/run_loop/tests/: helper_test.rs  lifecycle_test.rs  task_test.rs
crates/run_loop_timer/: Cargo.toml  README.md
crates/run_loop_timer/src/: lib.rs
crates/wry/: Cargo.toml  build.rs
crates/wry/.changes/: forward-hwnd-handler.md
crates/wry/src/: lib.rs
crates/wry/src/webview2/: mod.rs
crates/wry/src/wkwebview/: mod.rs
crates/wry/src/wkwebview/class/: url_scheme_handler.rs
crates/wxp/: Cargo.toml  README.md
crates/wxp/examples/: README.md  run_loop_channel_demo.rs  run_loop_command_demo.rs  tao_channel_demo.rs  tao_command_demo.rs  winit_channel_demo.rs  winit_command_demo.rs
crates/wxp/src/: builder.rs  initialization.rs  lib.rs  web_context.rs  webview.rs  webview_ref.rs  wxp_channel.rs  wxp_command.rs
crates/wxp/src/wxp_channel/: channel.rs  error.rs  internals.rs  try_from.rs
crates/wxp/src/wxp_command/: async_command.rs  command.rs  context.rs  handler.rs  invoke.rs  setup.rs  unified.rs
crates/wxp/src/wxp_webview/: error.rs
crates/wxp/tests/: wxp_channel_test.rs  wxp_command_test.rs  wxp_webview_test.rs
crates/wxp_clack/: Cargo.toml  README.md
crates/wxp_clack/src/: dpi.rs  lib.rs  window.rs
docs/: getting-started.md
example_gain_plugin/: README.md
example_gain_plugin/script/: build.sh  build_and_install.sh  install.sh
example_gain_plugin/src-gui/: index.html  package-lock.json  package.json
example_gain_plugin/src-gui/src/: main.ts  style.css
example_gain_plugin/src-plugin/: Cargo.toml  build.rs
example_gain_plugin/src-plugin/src/: audio.rs  gui.rs  lib.rs  params.rs  plugin.rs
examples/clap_wrapper_builder/: CMakeLists.txt  README.md  StandaloneInfo.plist.in  build_wrapper_plugin.sh  build_wrapper_plugin_static.sh  install_wrapper_plugin.sh
examples/gain_plugin/: README.md
examples/gain_plugin/script/: build.sh  build_and_install.sh  build_standalone.sh  build_wrapper.sh  install.sh
examples/gain_plugin/src-gui/: index.html  package-lock.json  package.json
examples/gain_plugin/src-plugin/: Cargo.toml  build.rs
examples/gain_plugin/src-plugin/src/: lib.rs
host_window/: Cargo.toml
host_window/src/: lib.rs  macos.rs
src/: lib.rs
src/webview2/: mod.rs
webview-bridge/: package-lock.json  package.json
webview-bridge/src/: index.ts
wxp/: Cargo.toml  README.md  style-guide..md
wxp/examples/: run_loop_channel_demo.rs  run_loop_command_demo.rs  winit_channel_demo.rs  winit_command_demo.rs
wxp/src/: builder.rs  initialization.rs  lib.rs  webview_ref.rs  wxp_command.rs
wxp/src/wxp_channel/: error.rs  internals.rs
wxp/src/wxp_command/: async_command.rs  context.rs  invoke.rs
wxp/tests/: wxp_channel_test.rs  wxp_command_test.rs  wxp_webview_test.rs
wxp_clack/: Cargo.toml
wxp_clack/src/: dpi.rs  lib.rs  window.rs
