[workspace]
resolver = "3"
members = [
    "crates/host_window",
    "crates/run_loop",
    "crates/run_loop_timer",
    "crates/wry",
    "crates/wxp",
]

[workspace.lints.rust]
unreachable_pub = "deny"

[workspace.dependencies]
# Keep shared wxp-owned dependencies here. Leave crates/wry's upstream dependency
# list local to crates/wry so syncing the embedded fork stays low-churn.
host_window = { path = "crates/host_window" }
log = "0.4"
novonotes_run_loop = { path = "crates/run_loop" }
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
wxp = { path = "crates/wxp" }
wry = { path = "crates/wry" }
