[package]
name = "novonotes_run_loop"
version = "0.6.0"
edition = "2024"
license = "MIT"
description = "Consistent, platform-independent interface to system run loop."
repository = "https://github.com/novonotes/wxp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
irondash_engine_context = { version = "0.5.0", optional = true }
once_cell = "1.16.0"
log = "0.4"

[features]
default = []
flutter = ["dep:irondash_engine_context"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.9"
objc2 = "0.5.0"
objc2-foundation = { version = "0.2.2", features = ["NSString", "NSThread"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.2.2", features = [
    "NSEvent",
    "NSResponder",
    "NSApplication",
    "NSGraphicsContext",
] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"

[dev-dependencies]
serial_test = "3.2"
pollster = "0.4"
criterion = "0.5"

[[bench]]
name = "latency"
harness = false

[lints.rust]
unreachable_pub = "allow"
