[package]
name = "wxp"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
description = "WebView based plugin UI foundation."
repository = "https://github.com/novonotes/wxp"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wry = { path = "../../wry", features = ["devtools"] }
async-trait = "0.1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt", "time", "sync"] }
parking_lot = "0.12"
thiserror = "2"
mime_guess = "2"
send_wrapper = "0.6"
novonotes_run_loop = { path = "../../vendor/run_loop" }
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
directories = "5"

[dev-dependencies]
serde_json = "1"
tao = "0.30"
chrono = "0.4"
winit = "0.30"
novonotes_run_loop = { path = "../../vendor/run_loop" }
host_window = { path = "../host_window" }
log = "0.4"

[[test]]
name = "wxp_webview_test"
path = "tests/wxp_webview_test.rs"
harness = false

[lints]
workspace = true

[[test]]
name = "wxp_command_test"
path = "tests/wxp_command_test.rs"
harness = false

[[test]]
name = "wxp_channel_test"
path = "tests/wxp_channel_test.rs"
harness = false
