[package]
name = "wxp_example_gain_plugin"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
atomic_float = "1.1.0"
clack-extensions = { git = "https://github.com/prokopyl/clack.git", rev = "9f2ccb40", features = ["audio-ports", "params", "clack-plugin", "gui", "state"] }
clack-plugin = { git = "https://github.com/prokopyl/clack.git", rev = "9f2ccb40" }
log = "0.4"
novonotes_run_loop = { path = "../../../vendor/run_loop" }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
wry = { path = "../../../wry", features = ["devtools"] }
wxp = { path = "../../../crates/wxp" }
wxp_clack = { path = "../../../crates/wxp_clack" }

[lints]
workspace = true

[build-dependencies]
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
